// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Primary Pill renders correctly 1`] = `
<div
  className="sc-bdVaJa jKopLr"
>
  <div
    className="sc-fjdhpX iBNkjm sc-VigVT gRVnTE sc-htoDjs gDCMNh sc-gzVnrw faVbst"
  >
    pill
  </div>
</div>
`;

exports[`Small Danger Pill renders correctly 1`] = `
<div
  className="sc-bdVaJa jKopLr"
>
  <div
    className="sc-fjdhpX iBNkjm sc-jTzLTM iHwAvD sc-htoDjs gDCMNh sc-gzVnrw faVbst"
  >
    pill
  </div>
</div>
`;
